change pass api debug
